feat: adaptation score comparison
